Fix empty lines in output collapsing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ body {
 }
 
 #output-display .line:empty:before {
-    content: ' ';
+    content: '-';
     visibility: hidden;
 }
 
